# columnar-engine

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE
.github/workflows/: ci.yml
apps/clickbench/: CMakeLists.txt  main.cpp
apps/converter/: CMakeLists.txt  main.cpp
benchmarks/: CMakeLists.txt  bench_bruh.cpp  bench_csv.cpp
cmake/: deps.cmake
include/bruh/: bruh.h  bruh_batch_reader.h  bruh_batch_writer.h  format.h
include/columnar/: add.h
include/core/: batch.h  batch_reader.h  batch_writer.h  column.h  column_factory.h  datatype.h  encoding.h  field.h  schema.h
include/core/columns/: abstract_column.h  bool_column.h  char_column.h  date_column.h  dictionary_string_column.h  numeric_column.h  string_column.h  timestamp_column.h
include/core/encoding/: auto_select.h  bit_packing.h  delta.h  dictionary.h  frame_of_reference.h  rle.h
include/csv/: csv.h  csv_batch_reader.h  csv_batch_writer.h  csv_options.h  csv_row_reader.h  schema_manager.h  schema_reader.h
include/exec/: agg_state_buffer.h  aggregation.h  clickbench.h  column_dispatch.h  column_helpers.h  column_row_access.h  expression.h  filter_operator.h  global_aggregate_operator.h  group_key_table.h  hash_aggregate_operator.h  kernel.h  metadata_pruning.h  operator.h  operator_visit.h  project_operator.h  selection.h  topn_operator.h
include/exec/expression/: builders.h  eval.h  types.h  utils.h
include/exec/group_key_table/: factories.h  hash.h
include/exec/kernel/: internal.h
include/util/: bit_vector.h  buffered_file.h  byte_buffer.h  byte_view.h  compression.h  date_time.h  macro.h  memory_mapped_file.h  parse.h  stream_helper.h  string_arena.h  string_hash.h
script/: bench_clickbench.sh  build.sh  convert.sh  fetch_clickbench.sh  merge_query_times.py  run_benchmarks.sh  run_query.sh  setup.sh
src/: add.cpp
src/bruh/: bruh_batch_reader.cpp  bruh_batch_writer.cpp
src/core/: column.cpp
src/core/encoding/: auto_select.cpp  bit_packing.cpp  dictionary.cpp  rle.cpp
src/csv/: csv_batch_reader.cpp  csv_batch_writer.cpp  csv_row_reader.cpp  schema_manager.cpp
src/exec/: agg_state_buffer.cpp  aggregation.cpp  clickbench.cpp  expression.cpp  filter_operator.cpp  global_aggregate_operator.cpp  group_key_table.cpp  hash_aggregate_operator.cpp  kernel.cpp  metadata_pruning.cpp  operator.cpp  project_operator.cpp  topn_operator.cpp
src/exec/group_key_table/: composite.cpp  int64.cpp  int64_int64_string.cpp  int64_pair.cpp  int64_string.cpp  string.cpp
src/exec/kernel/: arithm.cpp  compare.cpp  core.cpp  reduce.cpp  string.cpp  temporal.cpp
src/util/: buffered_file.cpp  compression.cpp  date_time.cpp  memory_mapped_file.cpp  parse.cpp  string_arena.cpp
tests/: CMakeLists.txt  test_bruh.cpp  test_bruh_compression.cpp  test_bruh_encoding.cpp  test_csv.cpp  test_exec.cpp  test_util.cpp
tools/: run_benchmarks.sh
